# i-ATA

./: .ENV_EXAMPLE  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  tailwind.config.js
.github/workflows/: azure-static-web-apps-ambitious-wave-0c0f5ad0f.yml  main_i-ata-backend-api.yml
backend/: .ENV  .gitignore  pyproject.toml  requirements.txt
backend/i-ata/: app.py
backend/i-ata/models/: model.py
backend/i-ata/services/: audio.py  azure.py  google.py
backend/i-ata/utils/: ata_models.json
backend/templates/: upload.html
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: models.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Button.jsx  Email.jsx  FileDrop.jsx  Header.jsx  Input.jsx  MeetingNote.jsx  Model.jsx  ProgressBar.jsx  ProgressContent.jsx  Transcript.jsx
frontend/src/context/: FormContext.jsx
frontend/src/utils/: models.json
i-ata/: app.py
i-ata/services/: azure.py  google.py
static/: style.css
templates/: home.html  upload.html
