[tool.poetry]
name = "i-ata"
version = "0.1.0"
description = "Automatic creation of minutes based on the transcript of a meeting"
authors = ["Roger Santos <roger.santos@global.ntt>"]
packages = [
    { include = "i-ata" }
]


[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.51.0"
moviepy = "^1.0.3"
speechrecognition = "^3.10.4"
pydub = "^0.25.1"
google-generativeai = "^0.8.3"
fastapi = {extras = ["standard"], version = "^0.115.2"}
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
annotated-types = "^0.7.0"
pydantic = "^2.10.6"
gunicorn = "^23.0.0"
google-genai = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
